--- a/content.jade
+++ b/content.jade
@@ -6,3 +6,4 @@ div.content
 				a.canvs-logo-link(href="/")
 					img.canvs-logo(src="images/logos/canvs-logo-white.svg")
 				
+		h1.site-header The next generation in social TV analytics.
