--- a/content.jade
+++ b/content.jade
@@ -5,5 +5,12 @@ div.content
 				p.logo-introducing Introducing
 				a.canvs-logo-link(href="/")
 					img.canvs-logo(src="images/logos/canvs-logo-white.svg")
-				
-		h1.site-header The next generation in social TV analytics.
+					div.powered-by-wrap
+						span.powered-by powered by
+						img.mashwork-logo(src="images/logos/mashwork-logo-white-red.svg")
+
+			a.video-play-btn
+
+			h1.site-header The next generation in social TV analytics.
+
+			a.learn-more-btn Learn more
