--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -1,31 +1,90 @@
 //STRUCTURE
 
 html {
-	background-color: $offWhite;
-	@include size(100%);
+  @include size(100%);
 }
 
 body {
-	@include size(100%);
+  background-color: $offWhite;
+  @include size(100%);
 }
 
 .content {
-	@include size(100%);
+  @include size(100%);
 }
 
 //HERO HEADER
 
 .hero-header {
-	@include size(100%);
-	text-align: center;
-	background: $offBlack url("/images/hero-image.jpg") no-repeat center center fixed;
-	background-size: cover;
+  width: 100%;
+  height: 90%;
+  min-height: 600px;
+  text-align: center;
+  background: $offBlack url("/images/hero-image.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
-.logo-introducing {
-	color: white;
-}
 
 .branding-wrap {
   margin-top: 35px;
+  width: 280px;
+  @extend .center-block;
+  .logo-introducing {
+    color: white;
+    @include rem('font-size', 21px);
+    font-weight: 300;
+  }
+  .canvs-logo {
+    width: 280px;
+  }
+}
+
+
+.canvs-logo-link .powered-by-wrap {
+  padding-top: 5px;
+  .powered-by, .mashwork-logo {
+    vertical-align: baseline;
+    line-height: 30px;
+  }
+  .powered-by {
+    font-family: $slabFontFamily;
+    font-style: italic;
+    text-decoration: none;
+    @include rem('font-size',14px);
+    @include font-smoothing;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+ .mashwork-logo {
+    width: 110px;
+    margin-left: 8px;
+    position: relative;
+    top: 3px;
+  }
+}
+
+.video-play-btn {
+  display: block;
+  @extend .center-block;
+  @include size(140px);
+  background-color: transparentize(white, .65);
+  border-radius: 100%;
+  margin: 5% auto;
+  @include triangle(right, 30px, white);
+}
+
+.site-header {
+  color: white;
+  padding: 0 20px;
+  width: 560px;
+  max-width: 100%;
+  display: block;
+  @extend .center-block;
+  @include font-smoothing;
+  margin-bottom: 30px;
+}
+
+.learn-more-btn {
+  @extend .btn-teal;
 }
