--- a/style/css/style.css
+++ b/style/css/style.css
@@ -4875,7 +4875,7 @@ button.close {
 .clearfix:after {
   clear: both; }
 
-.center-block {
+.center-block, .branding-wrap, .video-play-btn, .site-header {
   display: block;
   margin-left: auto;
   margin-right: auto; }
@@ -5001,17 +5001,54 @@ html {
   font-size: 62.5%;
   /* Sets up the Base 10 stuff */ }
 
+body {
+  font-family: "source-sans-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-smoothing: antialiased; }
+
 a {
   color: #9d854f; }
   a:hover {
     color: #9c844e; }
 
+h1, h2, h3, h4 {
+  text-align: center;
+  margin: 0; }
+
+h1.site-header {
+  font-family: "adelle", Georgia, "Times New Roman", Times, serif;
+  font-weight: 400;
+  font-size: 48px;
+  font-size: 4.8rem; }
+
+.btn-teal, .learn-more-btn {
+  display: inline-block;
+  color: white;
+  background-color: #30bcae;
+  padding: 0 20px;
+  margin: 0;
+  font-family: "jaf-bernino-sans-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 21px;
+  font-size: 2.1rem;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  text-decoration: none;
+  width: auto;
+  height: 45px;
+  line-height: 45px;
+  line-height: 4.5rem; }
+  .btn-teal:hover, .learn-more-btn:hover {
+    color: white;
+    background-color: #4fc6ba;
+    text-decoration: none; }
+
 html {
-  background-color: whitesmoke;
   width: 100%;
   height: 100%; }
 
 body {
+  background-color: whitesmoke;
   width: 100%;
   height: 100%; }
 
@@ -5021,16 +5058,62 @@ body {
 
 .hero-header {
   width: 100%;
-  height: 100%;
+  height: 90%;
+  min-height: 600px;
   text-align: center;
   background: #232323 url("/images/hero-image.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover; }
 
-.logo-introducing {
-  color: white; }
-
 .branding-wrap {
-  margin-top: 35px; }
+  margin-top: 35px;
+  width: 280px; }
+  .branding-wrap .logo-introducing {
+    color: white;
+    font-size: 21px;
+    font-size: 2.1rem;
+    font-weight: 300; }
+  .branding-wrap .canvs-logo {
+    width: 280px; }
+
+.canvs-logo-link .powered-by-wrap {
+  padding-top: 5px; }
+  .canvs-logo-link .powered-by-wrap .powered-by, .canvs-logo-link .powered-by-wrap .mashwork-logo {
+    vertical-align: baseline;
+    line-height: 30px; }
+  .canvs-logo-link .powered-by-wrap .powered-by {
+    font-family: "adelle", Georgia, "Times New Roman", Times, serif;
+    font-style: italic;
+    text-decoration: none;
+    font-size: 14px;
+    font-size: 1.4rem;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
+    .canvs-logo-link .powered-by-wrap .powered-by:hover {
+      text-decoration: none; }
+  .canvs-logo-link .powered-by-wrap .mashwork-logo {
+    width: 110px;
+    margin-left: 8px;
+    position: relative;
+    top: 3px; }
+
+.video-play-btn {
+  display: block;
+  width: 140px;
+  height: 140px;
+  background-color: rgba(255, 255, 255, 0.35);
+  border-radius: 100%;
+  margin: 5% auto;
+  border: 30px transparent solid; }
+
+.site-header {
+  color: white;
+  padding: 0 20px;
+  width: 560px;
+  max-width: 100%;
+  display: block;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin-bottom: 30px; }
 
 /*# sourceMappingURL=style.css.map */
