--- a/style/sass/_mixins.scss
+++ b/style/sass/_mixins.scss
@@ -16,3 +16,49 @@
     @content 
   }
 }
+
+
+//Font Smoothing
+
+//Source: http://maximilianhoffmann.com/posts/better-font-rendering-on-osx
+
+@mixin font-smoothing($value: on) {
+    @if $value == on {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+    @else {
+        -webkit-font-smoothing: subpixel-antialiased;
+        -moz-osx-font-smoothing: auto;
+    }
+}
+
+
+//Triangles
+
+//Source: http://blackbe.lt/useful-sass-mixins-css-trangle/
+
+@mixin triangle($dir, $size, $color) {
+    border: $size transparent solid;
+ 
+    @if ($dir == "top" or $dir == "up" or $dir == "left" or $dir == "before") {
+        &:before {
+            @if ($dir == "top" or $dir == "up") {
+                border-bottom-color: $color;
+            }
+            @else if ($dir == "right" or $dir == "after") {
+                border-left-color: $color;
+            }
+        }
+    }
+    @else if ($dir == "bottom" or $dir == "down" or $dir == "left" or $dir == "before") {
+        &:after {
+            @if ($dir == "bottom" or $dir == "down") {
+                border-top-color: $color;
+            }
+            @else if ($dir == "left" or $dir == "before") {
+                border-right-color: $color;
+            }
+        }
+    }
+}
