--- a/content.jade
+++ b/content.jade
@@ -1,16 +1,17 @@
 div.content
-	header.hero-header
-		div.container
-			div.branding-wrap
-				p.logo-introducing Introducing
-				a.canvs-logo-link(href="/")
-					img.canvs-logo(src="images/logos/canvs-logo-white.svg")
-					div.powered-by-wrap
-						span.powered-by powered by
-						img.mashwork-logo(src="images/logos/mashwork-logo-white-red.svg")
+  header.hero-header
+    div.container
+      div.branding-wrap
+        p.logo-introducing Introducing
+        a.canvs-logo-link(href="/")
+          img.canvs-logo(src="images/logos/canvs-logo-white.svg")
+          div.powered-by-wrap
+            span.powered-by powered by
+            img.mashwork-logo(src="images/logos/mashwork-logo-white-red.svg")
 
-			a.video-play-btn
+      h1.site-header The next generation in social TV analytics.
 
-			h1.site-header The next generation in social TV analytics.
+      a.video-play-btn
+        img.play-btn-triangle(src="images/play-btn-triangle.svg", href="/")
 
-			a.learn-more-btn Learn more
+      a.learn-more-btn Learn more
