--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5010,7 +5010,8 @@ body {
 a {
   color: #9d854f; }
   a:hover {
-    color: #9c844e; }
+    color: #9c844e;
+    pointer: cursor; }
 
 h1, h2, h3, h4 {
   text-align: center;
@@ -5059,6 +5060,7 @@ body {
 .hero-header {
   width: 100%;
   height: 90%;
+  position: relative;
   min-height: 600px;
   text-align: center;
   background: #232323 url("/images/hero-image.jpg") no-repeat center center fixed;
@@ -5067,6 +5069,7 @@ body {
 
 .branding-wrap {
   margin-top: 35px;
+  margin-bottom: 40px;
   width: 280px; }
   .branding-wrap .logo-introducing {
     color: white;
@@ -5103,8 +5106,14 @@ body {
   height: 140px;
   background-color: rgba(255, 255, 255, 0.35);
   border-radius: 100%;
-  margin: 5% auto;
-  border: 30px transparent solid; }
+  margin: 0 auto;
+  margin-bottom: 40px; }
+  .video-play-btn .play-btn-triangle {
+    width: 40px;
+    height: 50px;
+    position: relative;
+    margin-top: 45px;
+    margin-left: 8px; }
 
 .site-header {
   color: white;
@@ -5114,6 +5123,13 @@ body {
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-bottom: 30px; }
+  margin-bottom: 40px; }
+
+.learn-more-btn {
+  width: 180px;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin-left: -90px; }
 
 /*# sourceMappingURL=style.css.map */
