--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -18,6 +18,7 @@ body {
 .hero-header {
   width: 100%;
   height: 90%;
+  position: relative;
   min-height: 600px;
   text-align: center;
   background: $offBlack url("/images/hero-image.jpg") no-repeat center center fixed;
@@ -27,6 +28,7 @@ body {
 
 .branding-wrap {
   margin-top: 35px;
+  margin-bottom: 40px;
   width: 280px;
   @extend .center-block;
   .logo-introducing {
@@ -70,8 +72,15 @@ body {
   @include size(140px);
   background-color: transparentize(white, .65);
   border-radius: 100%;
-  margin: 5% auto;
-  @include triangle(right, 30px, white);
+  margin: 0 auto;
+  margin-bottom: 40px;
+  .play-btn-triangle {
+    width: 40px;
+    height: 50px;
+    position: relative;
+    margin-top: 45px;
+    margin-left: 8px;
+  }
 }
 
 .site-header {
@@ -82,9 +91,14 @@ body {
   display: block;
   @extend .center-block;
   @include font-smoothing;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .learn-more-btn {
   @extend .btn-teal;
+  width: 180px;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin-left: -90px;
 }
