Added another couple of sections

--- a/content.jade
+++ b/content.jade
@@ -18,16 +18,17 @@ div.content
  
   section.about-canvs-section
     div.container
-      header.section-header-wrap
-        h1.section-header Nuanced insights, completely automated.
-      div.content-box.about-canvs-box.stop-counting
-        img.about-canvs-illustration(src="images/stop-counting.svg")
-        h2 Stop counting.<br>Start understanding.
-        p You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. Spend your time building fascinating insights, not wading through Tweets.
-      div.content-box.about-canvs-box.forget-sentiment
-        img.about-canvs-illustration(src="images/forget-sentiment.svg")
-        h2 Forget sentiment.<br>Discover meaning.
-        p We know that social media sentiment tools suck because we’ve used them all. We don’t even believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.
+      div.row
+        header.section-header-wrap
+          h1.section-header Nuanced insights, completely automated.
+        div.content-box.about-canvs-box.stop-counting
+          img.about-canvs-illustration(src="images/stop-counting.svg")
+          h2 Stop counting.<br>Start understanding.
+          p You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. Spend your time building fascinating insights, not wading through Tweets.
+        div.content-box.about-canvs-box.forget-sentiment
+          img.about-canvs-illustration(src="images/forget-sentiment.svg")
+          h2 Forget sentiment.<br>Discover meaning.
+          p We know that social media sentiment tools suck because we’ve used them all. We don’t even believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.
 
       a.action-btn.request-demo-btn(href='/') Request a Demo
 
@@ -42,20 +43,64 @@ div.content
 
   section.actionable-insights-section
     div.container
-      header.section-header-wrap
-        h1.section-header Actionable insights for the TV ecosystem.
-      div.content-box.actionable-insights-box
-        div.icon-circle
-          img.actionable-insights-illustration(src="images/marketing-icon.svg")
-        h2 Marketing
-        p You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. 
-      div.content-box.actionable-insights-box
-        div.icon-circle
-          img.actionable-insights-illustration(src="images/adsales-icon.svg")
-        h2 Ad Sales
-        p Use Canvs to identify what other brands your most engaged audience loves. Then get to work selling super effective spots and integrations. 
-      div.content-box.actionable-insights-box
-        div.icon-circle
-          img.actionable-insights-illustration(src="images/production-icon.svg")
-        h2 Production
-        p Use Canvs to get feedback in real time. Know immediately if that joke in the third act landed and if viewers hate the new villain as much as you want them to.
+      div.row
+        header.section-header-wrap
+          h1.section-header Actionable insights for the TV ecosystem.
+        div.content-box.actionable-insights-box
+          div.icon-circle
+            img.actionable-insights-illustration(src="images/marketing-icon.svg")
+          h2 Marketing
+          p You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. 
+        div.content-box.actionable-insights-box
+          div.icon-circle
+            img.actionable-insights-illustration(src="images/adsales-icon.svg")
+          h2 Ad Sales
+          p Use Canvs to identify what other brands your most engaged audience loves. Then get to work selling super effective spots and integrations. 
+        div.content-box.actionable-insights-box
+          div.icon-circle
+            img.actionable-insights-illustration(src="images/production-icon.svg")
+          h2 Production
+          p Use Canvs to get feedback in real time. Know immediately if that joke in the third act landed and if viewers hate the new villain as much as you want them to.
+
+      a.action-btn.get-started-btn(href='/') Get started with Canvs
+
+  section.single-solution-section
+    div.container
+      div.row
+        header.section-header-wrap
+          h1.section-header A single solution for everything you want.
+        div.content-box.single-solution-box.immediate-box
+          img.single-solution-illustration(src="images/immediate-icon.svg")
+          h2 Immediate
+          p 
+            strong No more settling for shaky sentiment. 
+            | No more hours manually calculating it yourself. Canvs gives you immediate, actionable insights about how your audience feels with the click of a mouse.
+        div.content-box.single-solution-box.credible-box
+          img.single-solution-illustration(src="images/credible-icon.svg")
+          h2 Credible
+          p 
+            strong Our pedigree speaks for itself: 
+            | Canvs was built by New York City’s best social TV analysts and data scientists as a tool for themselves. See what it can do for you. 
+
+      div.row
+        div.content-box.single-solution-box.transparent-box
+          img.single-solution-illustration(src="images/transparent-icon.svg")
+          h2 Transparent
+          p 
+            strong Canvs gives you visibility into all conversation 
+            | so you can see that Canvs is really as good at categorizing reactions as we say it is. Trust Us. (Or Don’t.)
+        div.content-box.single-solution-box.credible-box
+          img.single-solution-illustration(src="images/beautiful-icon.svg")
+          h2 Beautiful
+          p 
+            strong Gone are crowded dashboards and illegible charts. 
+            | Canvs is clean, intuitive, and fun to use.
+      div.row
+        div.content-box.single-solution-box.intelligent-box
+          img.single-solution-illustration(src="images/intelligent-icon.svg")
+          h2 Intelligent
+          p 
+            strong Canvs gives you visibility into all conversation 
+            | so you can see that Canvs is really as good at categorizing reactions as we say it is. Trust Us. (Or Don’t.)
+
+      a.action-btn.info-sheet-btn(href='/') Canvs Info Sheet
