Completed overall structure

--- a/content.jade
+++ b/content.jade
@@ -104,3 +104,27 @@ div.content
             | so you can see that Canvs is really as good at categorizing reactions as we say it is. Trust Us. (Or Don’t.)
 
       a.action-btn.info-sheet-btn(href='/') Canvs Info Sheet
+
+  footer.page-footer
+    ul.social-links
+      li.twitter-link
+        a(href="https://www.twitter.com/mashwork")
+          img.social-icon(src="images/twitter-icon.svg")
+      li.facebook-link
+        a(href="https://www.facebook.com/mashwork")
+          img.social-icon(src="images/facebook-icon.svg")
+      li.linkedin-link
+        a(href="https://www.linkedin.com/company/mashwork")
+          img.social-icon(src="images/linkedin-icon.svg")
+    p.copyright 
+      | &copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; 
+      a(href="/privacy") Privacy Policy
+    p.contact-info 
+      a(href="https://goo.gl/maps/slKfo") 11 W. 25th St, 7th Fl, New York, NY 10010
+      | • 
+      a(href="tel:1-646-201-9124") 646-201-9124
+      | • 
+      a(href="/about") About Us 
+      | • 
+      a(href="http://mashwork.com/blog") News
+
