--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5130,7 +5130,8 @@ section, .section {
   padding-bottom: 40px; }
 
 .section-header-wrap {
-  margin: 40px 0; }
+  margin: 40px 0;
+  margin-top: 50px; }
 
 .content-box {
   margin-bottom: 30px; }
@@ -5141,7 +5142,7 @@ section, .section {
   position: relative;
   min-height: 600px;
   text-align: center;
-  background: #232323 url("/images/hero-image.jpg") no-repeat center center fixed;
+  background: #282828 url("/images/hero-image.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover; }
 
@@ -5262,7 +5263,7 @@ section, .section {
 
 .actionable-insights-section {
   text-align: center;
-  background: #232323 url("/images/hero-image.jpg") no-repeat center center fixed; }
+  background: #282828 url("/images/hero-image.jpg") no-repeat center center fixed; }
   .actionable-insights-section h1 {
     color: white; }
 
@@ -5321,5 +5322,56 @@ section, .section {
 @media (min-width: 768px) {
   .intelligent-box {
     margin-left: 25%; } }
+
+.page-footer {
+  height: 200px;
+  background-color: #282828;
+  text-align: center; }
+
+.social-links {
+  list-style: none;
+  margin: 30px 0;
+  padding: 0;
+  display: inline-block; }
+  .social-links li {
+    display: inline-block;
+    margin: 0 10px; }
+    .social-links li a {
+      width: 50px;
+      height: 50px;
+      display: inline-block;
+      border-radius: 100%;
+      background-color: rgba(255, 255, 255, 0.25);
+      -webkit-transition: background-color 0.25s linear, -webkit-transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      transition: background-color 0.25s linear, transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+      .social-links li a:hover {
+        background-color: rgba(255, 255, 255, 0.5);
+        -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+        transform: scale(1.2); }
+        .social-links li a:hover .social-icon {
+          -webkit-transform: scale(1.2);
+          -ms-transform: scale(1.2);
+          transform: scale(1.2); }
+  .social-links .social-icon {
+    width: auto;
+    height: 20px;
+    margin-top: 15px;
+    -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+
+.copyright {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 14px;
+  font-size: 1.4rem; }
+  .copyright a {
+    color: rgba(255, 255, 255, 0.75); }
+
+.contact-info {
+  color: #9d854f;
+  font-size: 16px;
+  font-size: 1.6rem; }
+  .contact-info a {
+    margin: 0 7px; }
 
 /*# sourceMappingURL=style.css.map */
