--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -21,6 +21,7 @@ section, .section {
 
 .section-header-wrap {
   margin: 40px 0;
+  margin-top: 50px;
   @extend .clearfix;
 }
 
@@ -234,4 +235,60 @@ section, .section {
 
 .intelligent-box {
   @include make-sm-column-offset(3);
+}
+
+
+//Page footer
+
+.page-footer {
+  height: 200px;
+  background-color: $offBlack;
+  text-align: center;
+}
+
+.social-links {
+  list-style: none;
+  margin: 30px 0;
+  padding: 0;
+  display: inline-block;
+  li {
+    display: inline-block;
+    margin: 0 10px;
+    a {
+      @include size(50px);
+      display: inline-block;
+      border-radius: 100%;
+      background-color: transparentize(white, .75);
+      transition: background-color .25s linear, transform .25s $easeOutBack;
+      &:hover {
+        background-color: transparentize(white, .5);
+        transform: scale(1.2);
+        .social-icon {
+          transform: scale(1.2);
+        }
+      }
+    }
+  }
+  .social-icon {
+    width: auto;
+    height: 20px;
+    margin-top: 15px;
+    transition: transform .25s $easeOutBack;
+  }
+}
+
+.copyright {
+  color: transparentize(white, .25);
+  @include rem('font-size', 14px);
+  a {
+    color: transparentize(white, .25);
+  }
+}
+
+.contact-info {
+  color: $gold;
+  @include rem('font-size', 16px);
+  a {
+    margin: 0 7px;
+  }
 }
