Vertically centered hero-header

--- a/content.jade
+++ b/content.jade
@@ -1,18 +1,19 @@
 div.content
   header.hero-header
     div.container
-      div.branding-wrap
-        p.logo-introducing Introducing
-        a.canvs-logo-link(href="/")
-          img.canvs-logo(src="images/logos/canvs-logo-white.svg")
-          div.powered-by-wrap
-            span.powered-by powered by
-            img.mashwork-logo(src="images/logos/mashwork-logo-white-red.svg")
+      div.hero-header-content
+        div.branding-wrap
+          p.logo-introducing Introducing
+          a.canvs-logo-link(href="/")
+            img.canvs-logo(src="images/logos/canvs-logo-white.svg")
+            div.powered-by-wrap
+              span.powered-by powered by
+              img.mashwork-logo(src="images/logos/mashwork-logo-white-red.svg")
 
-      h1.site-header The next generation in social TV analytics.
+        h1.site-header The next generation in social TV analytics.
 
-      a.video-play-btn(href='/')
-        img.play-btn-triangle(src="images/play-btn-triangle.svg")
+        a.video-play-btn(href='/')
+          img.play-btn-triangle(src="images/play-btn-triangle.svg")
 
       a.action-btn.learn-more-btn(href='/') Learn More
  
