--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5122,6 +5122,10 @@ body {
   width: 100%;
   height: 100%; }
 
+.container {
+  position: relative;
+  height: 100%; }
+
 .content {
   width: 100%;
   height: 100%; }
@@ -5140,7 +5144,7 @@ section, .section {
   width: 100%;
   height: 90%;
   position: relative;
-  min-height: 600px;
+  min-height: 640px;
   text-align: center;
   background: #282828 url("/images/hero-image.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -5148,7 +5152,7 @@ section, .section {
 
 .branding-wrap {
   margin-top: 35px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   width: 280px; }
   .branding-wrap .logo-introducing {
     color: white;
@@ -5159,6 +5163,11 @@ section, .section {
     width: 280px; }
   .branding-wrap a:hover {
     text-decoration: none; }
+
+.hero-header-content {
+  position: relative;
+  top: 45%;
+  margin-top: -250px; }
 
 .canvs-logo-link .powered-by-wrap {
   padding-top: 5px; }
@@ -5217,7 +5226,7 @@ section, .section {
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-bottom: 50px; }
+  margin-bottom: 40px; }
 
 .action-btn {
   display: inline-block; }
