--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -9,6 +9,11 @@ body {
   @include size(100%);
 }
 
+.container {
+  position: relative;
+  height: 100%;
+}
+
 .content {
   @include size(100%);
   @extend .clearfix;
@@ -35,7 +40,7 @@ section, .section {
   width: 100%;
   height: 90%;
   position: relative;
-  min-height: 600px;
+  min-height: 640px;
   text-align: center;
   background: $offBlack url("/images/hero-image.jpg") no-repeat center center fixed;
   background-size: cover;
@@ -43,7 +48,7 @@ section, .section {
 
 .branding-wrap {
   margin-top: 35px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   width: 280px;
   @extend .center-block;
   .logo-introducing {
@@ -57,6 +62,12 @@ section, .section {
   a:hover {
     text-decoration: none;
   }
+}
+
+.hero-header-content {
+  position: relative;
+  top: 45%;
+  margin-top: -250px;  
 }
 
 .canvs-logo-link .powered-by-wrap {
@@ -117,7 +128,7 @@ section, .section {
   display: block;
   @extend .center-block;
   @include font-smoothing;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .action-btn {
