Fixed second background cover

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5272,7 +5272,9 @@ section, .section {
 
 .actionable-insights-section {
   text-align: center;
-  background: #282828 url("/images/hero-image.jpg") no-repeat center center fixed; }
+  background: #282828 url("/images/hero-image.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  background-size: cover; }
   .actionable-insights-section h1 {
     color: white; }
 
