--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -193,6 +193,7 @@ section, .section {
   }
   text-align: center;
   background: $offBlack url("/images/hero-image.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
 
