--- a/content.jade
+++ b/content.jade
@@ -1,5 +1,8 @@
 div.content
   header.hero-header
+    a.canvs-login(href="http://canvs.tv/login") Login
+      span.login-icon
+        img(src="images/user-icon.svg")
     div.container
       div.hero-header-content
         div.branding-wrap
@@ -109,23 +112,28 @@ div.content
   footer.page-footer
     ul.social-links
       li.twitter-link
-        a(href="https://www.twitter.com/mashwork")
+        a(href="https://www.twitter.com/mashwork", target="_blank")
           img.social-icon(src="images/twitter-icon.svg")
       li.facebook-link
-        a(href="https://www.facebook.com/mashwork")
+        a(href="https://www.facebook.com/mashwork", target="_blank")
           img.social-icon(src="images/facebook-icon.svg")
       li.linkedin-link
-        a(href="https://www.linkedin.com/company/mashwork")
+        a(href="https://www.linkedin.com/company/mashwork", target="_blank")
           img.social-icon(src="images/linkedin-icon.svg")
+
     p.copyright 
       | &copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; 
-      a(href="/privacy") Privacy Policy
+      a(href="/privacy", target="_blank") Privacy Policy
+
     p.contact-info 
-      a(href="https://goo.gl/maps/slKfo") 11 W. 25th St, 7th Fl, New York, NY 10010
+      a(href="https://goo.gl/maps/slKfo", target="_blank") 11 W. 25th St, 7th Fl, New York, NY 10010
       | • 
       a(href="tel:1-646-201-9124") 646-201-9124
       | • 
       a(href="/about") About Us 
       | • 
       a(href="http://mashwork.com/blog") News
+
+    a.made-in-ny(href="http://wearemadeinny.com/")
+      img(src="images/logos/made-in-ny-logo.svg")
 
