--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -89,7 +89,7 @@ section, .section {
 }
 
 .branding-wrap {
-  margin-top: 35px;
+  margin-top: 0;
   margin-bottom: 30px;
   width: 280px;
   @extend .center-block;
