Finished about page content

--- a/about/about-content.jade
+++ b/about/about-content.jade
@@ -1,4 +1,4 @@
-div.content.about-content
+div.about-content
   header.hero-header
     a.canvs-login(href="http://canvs.tv/login") Login
       span.login-icon
@@ -16,17 +16,17 @@ div.content.about-content
         h1.site-header Core Beliefs
 
       div.row
-        div.content-box.core-beliefs-box
+        div.content-box.core-beliefs-box.context
           div.icon-circle
             img.core-beliefs-illustration(src="images/context-icon.svg")
           h2 Context
           p Social marketers and researchers are no longer content simply counting mentions: social becomes a powerful insights tool only when we can understand the context of conversations.
-        div.content-box.core-beliefs-box
+        div.content-box.core-beliefs-box.emotion
           div.icon-circle
             img.core-beliefs-illustration(src="images/emotion-icon.svg")
           h2 Emotion
           p Canvs layers the emotional graph on top of the social graph to reveal context behind social conversations. We believe that understanding how audiences emotionally relate to content is the first step in building a meaningful relationship with them. 
-        div.content-box.core-beliefs-box
+        div.content-box.core-beliefs-box.nuance
           div.icon-circle
             img.core-beliefs-illustration(src="images/nuance-icon.svg")
           h2 Nuance
@@ -35,14 +35,50 @@ div.content.about-content
   section.canvs-origins-section
     div.container
       div.row
-        header.section-header-wrap
-          h1.section-header Canvs Origins
-          p.section-description Since 2010, Mashwork analysts have been delivering reports to the world’s top brands.<br>Our observations led us to creating Canvs and assure us it’s a compelling tool. 
         div.canvs-origins-box
+          header.section-header-wrap
+            h1.section-header Canvs Origins
+            p.section-description Since 2010, Mashwork analysts have been delivering reports to the world’s top brands. Our observations led us to creating Canvs and assure us it’s a compelling tool. 
           div.row
             div.content-box.jared
               img.canvs-origins-image(src="images/team/jared.jpg")
               h2 Jared Feldman
+              h3 Founder &amp; CEO
+
             div.content-box.sam
               img.canvs-origins-image(src="images/team/sam.jpg")
-              h2 Sam Hui
+              h2 Sam Hui, PhD
+              h3 Chief Scientist
+
+          p Mashwork was established in 2010 by entrepreneur Jared Feldman and Stern School of Business professor, Sam Hui, PhD. We excel in synthesizing data from countless best-in-class tools to deliver actionable insights.
+          p Canvs&#8482;, Mashwork’s proprietary social TV analytics platform, provides scalable measurement and qualitative analysis of Twitter reactions to entertainment content. Our technology is based on years of R&amp;D, and was tested in private beta with top content providers like Viacom and Time Warner.
+
+      a.action-btn.learn-services-btn(href='/') Learn About Services
+
+  section.canvs-advisors-section
+    div.container
+      header.section-header-wrap
+        h1.section-header Advisors
+      div.row
+        div.content-box.stephen-gatfield
+          img.canvs-advisors-image(src="images/advisors/stephen-gatfield.jpg")
+          h2 Stephen Gatfield
+          h3 Marcoms Strategist &amp; Investor
+
+        div.content-box.michoel-ogince
+          img.canvs-advisors-image(src="images/advisors/michoel-ogince.jpg")
+          h2 Michoel Ogince
+          h3 Founding Partner at Windforce Ventures
+
+        div.content-box.shaula-yemini
+          img.canvs-advisors-image(src="images/advisors/shaula-yemini.jpg")
+          h2 Shaula Yemini, PhD
+          h3 Technical Advisor
+
+  section.join-us-section
+    div.container
+      header.section-header-wrap
+        h1.section-header Join Us
+        p.section-description View our current openings.
+
+      a.action-btn.apply-now-btn(href='/') Apply Now
