--- a/style/css/style.css
+++ b/style/css/style.css
@@ -4869,10 +4869,10 @@ button.close {
 
   .carousel-indicators {
     bottom: 20px; } }
-.clearfix:before, .content:before, section:before, .section:before, .section-header-wrap:before, .page-footer:before, .clearfix:after, .content:after, section:after, .section:after, .section-header-wrap:after, .page-footer:after {
+.clearfix:before, .header-content:before, section:before, .section:before, .section-header-wrap:before, .page-footer:before, .canvs-advisors-section:before, .clearfix:after, .header-content:after, section:after, .section:after, .section-header-wrap:after, .page-footer:after, .canvs-advisors-section:after {
   content: " ";
   display: table; }
-.clearfix:after, .content:after, section:after, .section:after, .section-header-wrap:after, .page-footer:after {
+.clearfix:after, .header-content:after, section:after, .section:after, .section-header-wrap:after, .page-footer:after, .canvs-advisors-section:after {
   clear: both; }
 
 .center-block, .branding-wrap, .video-play-btn, .site-header, .about-canvs-box p, .actionable-insights-box p, .single-solution-box p, .core-beliefs-box p {
@@ -5028,7 +5028,7 @@ h1 {
   font-family: "adelle", Georgia, "Times New Roman", Times, serif;
   font-weight: 400; }
 
-h2 {
+h2, h3 {
   font-family: "jaf-bernino-sans-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400; }
 
@@ -5046,6 +5046,15 @@ h1.section-header {
   font-size: 3.6rem;
   line-height: 42px;
   line-height: 4.2rem; }
+
+h3 {
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 21px;
+  line-height: 2.1rem; }
+
+p {
+  margin-bottom: 15px; }
 
 p.section-description {
   color: #9d854f;
@@ -5128,7 +5137,7 @@ body {
   position: relative;
   height: 100%; }
 
-.content {
+.header-content {
   width: 100%;
   height: 100%; }
 
@@ -5458,6 +5467,13 @@ section, .section {
 .about-content .branding-wrap {
   margin-top: 0;
   margin-bottom: 40px; }
+.about-content h2 {
+  font-family: "adelle", Georgia, "Times New Roman", Times, serif;
+  font-size: 21px;
+  font-size: 2.1rem;
+  line-height: 24px;
+  line-height: 2.4rem;
+  margin-bottom: 5px; }
 
 .core-beliefs-box {
   position: relative;
@@ -5488,19 +5504,27 @@ section, .section {
       margin: 0 auto;
       margin-top: 25px; }
 
+.core-beliefs-box.context .core-beliefs-illustration {
+  width: 60px;
+  height: 60px;
+  margin-top: 20px; }
+
 .canvs-origins-section {
   text-align: center; }
+  .canvs-origins-section .section-header {
+    margin-bottom: 30px; }
 
 .canvs-origins-box {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
-  padding-right: 15px; }
-  @media (min-width: 768px) {
+  padding-right: 15px;
+  margin-bottom: 30px; }
+  @media (min-width: 992px) {
     .canvs-origins-box {
       float: left;
       width: 66.6666666667%; } }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .canvs-origins-box {
       margin-left: 16.6666666667%; } }
   .canvs-origins-box .content-box {
@@ -5509,15 +5533,49 @@ section, .section {
     width: 50%;
     min-height: 1px;
     padding-left: 15px;
-    padding-right: 15px; }
-    .canvs-origins-box .content-box h2 {
-      font-family: "adelle", Georgia, "Times New Roman", Times, serif;
-      font-size: 24px;
-      font-size: 2.4rem; }
+    padding-right: 15px;
+    margin-bottom: 40px; }
   .canvs-origins-box .canvs-origins-image {
     width: 200px;
     height: 200px;
     border-radius: 100%;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    max-width: 100%;
+    height: 100%; }
+
+.canvs-advisors-section {
+  background-color: #282828;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+  .canvs-advisors-section p, .canvs-advisors-section h1, .canvs-advisors-section h3 {
+    color: white; }
+  .canvs-advisors-section .content-box {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+    float: left;
+    width: 50%;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px; }
+    @media (min-width: 768px) {
+      .canvs-advisors-section .content-box {
+        float: left;
+        width: 33.3333333333%; } }
+    .canvs-advisors-section .content-box img {
+      width: 130px;
+      height: 130px;
+      border-radius: 100%;
+      margin-bottom: 20px; }
+  @media screen and (max-width: 767px) {
+    .canvs-advisors-section .shaula-yemini {
+      float: none;
+      margin: 0 auto; } }
+
+.join-us-section {
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
