--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -14,7 +14,7 @@ body {
   height: 100%;
 }
 
-.content {
+.header-content {
   @include size(100%);
   @extend .clearfix;
 }
@@ -293,7 +293,7 @@ section, .section {
 }
 
 
-//Page footer
+//Page Footer
 
 .page-footer {
   background-color: $offBlack;
