--- a/style/sass/_typography.scss
+++ b/style/sass/_typography.scss
@@ -37,7 +37,7 @@ h1 {
   font-weight: 400;
 }
 
-h2 {
+h2, h3     {
   font-family: $headerFontFamily;
   font-weight: 400;
 }
@@ -54,6 +54,15 @@ h1.section-header {
   color: $grayDark;
   @include rem('font-size', 36px);
   @include rem('line-height', 42px);
+}
+
+h3 {
+  @include rem('font-size', 18px);
+  @include rem('line-height', 21px);
+}
+
+p {
+  margin-bottom: 15px;
 }
 
 p.section-description {
