--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5078,6 +5078,8 @@ p.section-description {
   background-color: #30bcae;
   padding: 0 10px;
   margin: 0;
+  border: 0;
+  border-radius: 0;
   font-family: "jaf-bernino-sans-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
   font-size: 21px;
@@ -5104,6 +5106,8 @@ p.section-description {
   background-color: #a0a0a0;
   padding: 0 10px;
   margin: 0;
+  border: 0;
+  border-radius: 0;
   font-family: "jaf-bernino-sans-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
   font-size: 21px;
@@ -5163,7 +5167,7 @@ section, .section {
 
 .canvs-login {
   position: absolute;
-  z-index: 9999;
+  z-index: 500;
   top: 15px;
   right: 15px;
   height: 30px;
@@ -5455,6 +5459,24 @@ section, .section {
   .made-in-ny img {
     width: 50px;
     height: 50px; }
+
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0; }
+
+.modal-content {
+  height: 100%;
+  border-radius: 0;
+  background-color: #e8e8e8; }
+
+.modal-header {
+  text-align: center;
+  border: none; }
+
+.modal-footer {
+  text-align: center;
+  border: none; }
 
 .about-content .hero-header {
   height: auto;
