--- a/style/sass/_buttons.scss
+++ b/style/sass/_buttons.scss
@@ -4,6 +4,8 @@
 	background-color: $color;
 	padding: 0 10px;
 	margin: 0;
+	border: 0;
+	border-radius: 0;
 	font-family: $headerFontFamily;
 	text-align: center;
 	@include rem('font-size', 21px);
