--- a/style/sass/_primary.scss
+++ b/style/sass/_primary.scss
@@ -48,7 +48,7 @@ section, .section {
 
 .canvs-login {
   position: absolute;
-  z-index: 9999;
+  z-index: 500;
   top: 15px;
   right: 15px;
   height: 30px;
@@ -361,4 +361,28 @@ section, .section {
   img {
     @include size(50px);
   }
+}
+
+//Modal Styles
+
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.modal-content {
+  height: 100%;
+  border-radius: 0;
+  background-color: shade($offWhite, 5%);
+}
+
+.modal-header {
+  text-align: center;
+  border: none;
+}
+
+.modal-footer {
+  text-align: center;
+  border: none;
 }
